# ds-cookiebaker

./: .bumpversion.cfg  .coveragerc  README.md  app.yaml  app_dev.yaml  plumber.yaml  requirements.txt  requirements_local.txt  service.yaml  service_dev.yaml  setup.cfg  tox.ini  vars.yaml
container/: Dockerfile  pip_conf.conf  vm_docker_build.sh
src/edo/cookiebaker/: analyze.py  analyze_notebook.py  cookiecutter_sync.py  evaluate.py  evaluate_notebook.py  get_data.py  get_table.py  predict.py  train.py
src/edo/cookiebaker/_utils/: __init__.py  data_drift.py  get_variables_types.py  release_model.py
src/edo/cookiebaker/app/: app.py  app_profiler.py  deploy_app.py  run_app.py
src/edo/cookiebaker/app/.streamlit/: config.toml
src/edo/cookiebaker/app/_utils/: server_setup.py  theme.css  theme.py
src/edo/cookiebaker/model_configuration/: hp_config.yaml  variables_types.csv
src/edo/cookiebaker/model_configuration/prompts/: prompt.tmpl  system.tmpl
src/edo/cookiebaker/predict_me/: get_dag.py
src/edo/cookiebaker/queries/: data.sql  get_data.sql  get_data_x.sql  schema_ds_cookiecutter_sync.json
src/edo/cookiebaker/train_me/: README.md  components.py  create_components.py  llm_model.py  llm_tools.py  pipeline.py  run_pipeline.py  run_pipeline_local.py  train_hp_vertex.py
tests/: test_cookiecutter_sync.py
tests/integration/: test_prompt.py
