[aliases]
test = pytest

[metadata]
name = edo-ds-cookiecutter-sync
version = 0.0.1
author = eDreams ODIGEO
author_email = ds-mkt@edreamsodigeo.com
license = COPYRIGHT
description = A library tool to migrate from setup.py to setup.cfg
keywords = setup.py,setuptools
url = http://bitbucket.org/odigeoteam/edo-ds-mkt-lib-ds-cookiecutter-sync
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9


[options]
package_dir =
    = src
install_requires = file: requirements.txt
include_package_data = True
namespace_packages = edo
;scripts = scripts/setuptools.sh

[options.extras_require]
local = file: requirements_local.txt

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cookiecutter_sync_train=edo.cookiecutter_sync.train:main
    cookiecutter_sync_get_data=edo.cookiecutter_sync.get_data:main
    cookiecutter_sync_predict=edo.cookiecutter_sync.predict:main

